baml_language/crates/baml_tests/snapshots/type_annotation/baml_tests__type_annotation__02_parser__type_alias_interaction.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "MetaAlias"
    EQUALS "="
    TYPE_EXPR "type"
      WORD "type"
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "MetaList"
    EQUALS "="
    TYPE_EXPR "type[]"
      WORD "type"
      L_BRACKET "["
      R_BRACKET "]"
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "MetaUnion"
    EQUALS "="
    TYPE_EXPR "type | string"
      WORD "type"
      PIPE "|"
      WORD "string"

=== ERRORS ===
None
