baml_language/crates/baml_tests/snapshots/type_annotation/baml_tests__type_annotation__02_parser__type_annotation.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_type_annotation"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "function_name"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            KW_LET "let"
            WORD "t"
            COLON ":"
            TYPE_EXPR "type"
              WORD "type"
          EQUALS "="
          CALL_EXPR
            PATH_EXPR "baml.llm.get_return_type"
              WORD "baml"
              DOT "."
              WORD "llm"
              DOT "."
              WORD "get_return_type"
            CALL_ARGS "(function_name)"
              L_PAREN "("
              WORD "function_name"
              R_PAREN ")"
          SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          STRING_LITERAL "ok"
            QUOTE """
            WORD "ok"
            QUOTE """
          SEMICOLON ";"
        R_BRACE "}"

=== ERRORS ===
None
