baml_language/crates/baml_tests/snapshots/type_annotation/baml_tests__type_annotation__02_parser__type_as_identifier.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "RiskFactor"
    L_BRACE "{"
    FIELD
      WORD "type"
      TYPE_EXPR "string"
        WORD "string"
    FIELD
      WORD "severity"
      TYPE_EXPR "float"
        WORD "float"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "MetaField"
    L_BRACE "{"
    FIELD
      WORD "type"
      TYPE_EXPR "type"
        WORD "type"
    R_BRACE "}"
  ENUM_DEF
    KW_ENUM "enum"
    WORD "Kind"
    L_BRACE "{"
    ENUM_VARIANT "type"
      WORD "type"
    ENUM_VARIANT "other"
      WORD "other"
    R_BRACE "}"

=== ERRORS ===
None
